test/widget_test.dart
// This is a basic widget test file.
//
// If this code is executed, it will fail with:
// LateInitializationError: Field '_instance@106780421' has not been initialized.

import 'package:flutter_test/flutter_test.dart';

void main() {
  testWidgets('Counter increments smoke test', (WidgetTester tester) async {
    // You can replace this with your actual widget test
    expect(true, true);
  });
}

